setting: update package.json
- set private value to false

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tool-box",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -23,6 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
