--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://brave-people.github.io/tool-box/",
   "name": "tool-box",
   "version": "0.1.0",
   "private": false,
@@ -7,9 +8,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-textarea-code-editor": "^2.0.6",
     "bootstrap": "^5.2.3",
     "crypto-js": "^4.1.1",
     "gh-pages": "^4.0.0",
+    "js-yaml": "^4.1.0",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
